[package]
name = "rquest"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
ratatui-textarea = "0.9.1"
reqwest = { version = "0.13.3", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28", features = ["derive"] }
arboard = "3.6.1" 
dirs = "6.0"
uuid = { version = "1.23.1", features = ["v4"] }
